Updating README and Comments

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<script type="text/javascript">
 			$(function() {
 				// apply the function
-				$('#autoComplete').autoComplete({	'url' : "http://localhost/testSVN/javascript/autocomplete/data.php",
+				$('#autoComplete').autoComplete({	'url' : "data.php",
 													'minchars' : 1});
 			});
 		</script>
