Update comments in jquery.autocomplete.js . Created jquery.autocomplete.min.js using http://jscompress.com/.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.js"></script>
 		<link rel="stylesheet" href="jquery.autocomplete.css" type="text/css" media="screen" />
-		<script type="text/javascript" src="jquery.autocomplete.js"></script>
+		<script type="text/javascript" src="jquery.autocomplete.min.js"></script>
 		<script type="text/javascript">
 			$(function() {
 				// apply the function
